--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/nextjs,windows,linux,macos,git,dotenv,visualstudiocode,webstorm
 *storybook.log
 storybook-static
+
+/generated/prisma
