config: add prisma client to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+generated/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/nextjs,windows,linux,macos,git,dotenv,visualstudiocode,webstorm
 # Edit at https://www.toptal.com/developers/gitignore?templates=nextjs,windows,linux,macos,git,dotenv,visualstudiocode,webstorm
 
