--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "umc-8th-hackathon",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint:check": "eslint '**/*.{js,ts,jsx,tsx}'",
