--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -1,4 +1,4 @@
-name: Restart PM2 process
+name: deploy-main
 
 on:
   push:
@@ -13,31 +13,55 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: SSH 연결
+      - name: Configure SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
+          echo "$EC2_SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
           cat >>~/.ssh/config <<END
-          Host ${{ secrets.SSH_HOST_NAME }}
-            HostName ${{ secrets.SERVER_HOST }}
-            User ${{ secrets.SERVER_USER }}
-            Port ${{ secrets.SERVER_PORT }}
+          Host hackathon
+            HostName $EC2_HOST
+            User $EC2_USER
             IdentityFile ~/.ssh/id_rsa
             StrictHostKeyChecking no
           END
+        env:
+          EC2_USER: ubuntu
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: checkout한 코드를 복사
+      - name: Copy Workspace
         run: |
-          ssh ${{ secrets.SSH_HOST_NAME }} 'sudo mkdir -p /opt/app'
-          ssh ${{ secrets.SSH_HOST_NAME }} 'sudo chown ubuntu:ubuntu /opt/app'
-          scp -r ./[!.]* ${{ secrets.SSH_HOST_NAME }}:/opt/app
+          ssh hackathon 'sudo mkdir -p /opt/app'
+          ssh hackathon 'sudo chown ubuntu:ubuntu /opt/app'
+          scp -r ./[!.]* hackathon:/opt/app
 
-      - name: 의존성 설치
+      - name: Install dependencies
         run: |
-          ssh ${{ secrets.SSH_HOST_NAME }} 'npm install --prefix /opt/app/'
+          ssh hackathon 'npm install --prefix /opt/app/'
 
-      - name: Restart PM2
+      - name: Copy systemd service file
         run: |
-          ssh ${{ secrets.SSH_HOST_NAME }} 'pm2 restart peekle'
+          ssh hackathon '
+            echo "[Unit]
+            Description=UMC 7th Project
+            After=network.target
+
+            [Service]
+            User=${USER}
+            ExecStart=/usr/bin/npm run dev --prefix /opt/app/
+            Restart=always
+
+            [Install]
+            WantedBy=multi-user.target" | sudo tee /etc/systemd/system/app.service
+          '
+
+      - name: Enable systemd service
+        run: |
+          ssh hackathon 'sudo systemctl daemon-reload'
+          ssh hackathon 'sudo systemctl enable app'
+
+      - name: Restart systemd service
+        run: |
+          ssh hackathon 'sudo systemctl restart app'
