--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -31,7 +31,7 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Copy Workspace
+      - name: Copy Workspace 1
         run: |
           ssh hackathon 'sudo mkdir -p /opt/app'
           ssh hackathon 'sudo chown ubuntu:ubuntu /opt/app'
